@@ -25,7 +25,6 @@ int         Castro::ppm_predict_gammae = 0;
 int         Castro::ppm_reference_eigenvectors = 0;
 int         Castro::plm_iorder = 2;
 int         Castro::hybrid_riemann = 0;
-int         Castro::use_colglaz = -1;
 int         Castro::riemann_solver = 0;
 int         Castro::cg_maxiter = 12;
 amrex::Real Castro::cg_tol = 1.0e-5;
